@@ -3,6 +3,11 @@
 
 @section v2_03_dev Changes with libapreq2-2.03-dev
 
+- C API [joes]
+  Compensate for a missing CRLF in empty file upload block, which 
+  actually complies with RFC 2046 Section 5.1.1.  Konqueror (version unknown)
+  and Mozilla 0.9.7 are known to emit such blocks.
+
 - Perl API [joes]
   $req->upload() in list context failed to filter out non-uploads.
   Also $req->upload("nonexistent-key-name") segfaults.
